[gd_scene load_steps=12 format=2]

[ext_resource path="res://Textures/Enemy/RollerFrame.png" type="Texture" id=1]
[ext_resource path="res://Shaders/smooth_pixel_art_3d.shader" type="Shader" id=2]
[ext_resource path="res://Textures/Enemy/RollerEye.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Components/Flasher.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Enemy/Roller.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Components/HealthHolder.tscn" type="PackedScene" id=6]
[ext_resource path="res://Textures/Enemy/RollerEyeBlink.tres" type="Texture" id=7]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/albedo_color = Color( 1.3, 0.44, 1.04, 1 )
shader_param/circle_progress = 1.0
shader_param/albedo_texture = ExtResource( 1 )

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/albedo_color = Color( 1, 1, 1, 1 )
shader_param/circle_progress = 1.0
shader_param/albedo_texture = ExtResource( 7 )

[sub_resource type="SphereShape" id=3]
radius = 12.0

[sub_resource type="SphereShape" id=4]
radius = 14.0

[node name="Roller" type="KinematicBody" groups=[
"ENEMY",
]]
collision_layer = 4
collision_mask = 5
script = ExtResource( 5 )

[node name="SpriteFrame" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.1 )
material_override = SubResource( 1 )
pixel_size = 1.0
texture = ExtResource( 1 )

[node name="Flasher" parent="SpriteFrame" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.1 )
flash_brightness = 2.0

[node name="SpriteEye" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )
material_override = SubResource( 2 )
pixel_size = 1.0
texture = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="HurtArea" type="Area" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="HurtArea"]
shape = SubResource( 4 )

[node name="TweenPhysics" type="Tween" parent="."]
playback_process_mode = 0

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.7

[node name="HealthHolder" parent="." instance=ExtResource( 6 )]
max_hp = 150.0

[connection signal="timeout" from="HurtTimer" to="." method="_on_HurtTimer_timeout"]
[connection signal="on_death" from="HealthHolder" to="." method="_on_HealthHolder_on_death"]
[connection signal="on_hurt" from="HealthHolder" to="." method="_on_HealthHolder_on_hurt"]
